--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -225,7 +225,7 @@
 
                 <div style="display: flex;flex-direction: row;">
                     <label class="selectLabels">Salesboard</label>
-                    <mat-form-field  formControlName="bmxSalesboard" appearance="outline">
+                    <mat-form-field formControlName="bmxSalesboard" appearance="outline">
                         <mat-label>Select Salesboard Project</mat-label>
                         <mat-select class="selectLabels">
                             <mat-option *ngFor="let settingsList of settingsData.SalesBoardProjectList"
@@ -235,7 +235,7 @@
                         </mat-select>
                     </mat-form-field>
                     <label class="selectLabels">Department</label>
-                    <mat-form-field  formControlName="bmxDepartment" appearance="outline">
+                    <mat-form-field formControlName="bmxDepartment" appearance="outline">
                         <mat-label>Select Department</mat-label>
                         <mat-select>
                             <mat-option *ngFor="let settingsList of settingsData.DepartmentList" [value]="settingsList">
@@ -255,7 +255,7 @@
                     <label class="selectLabels">Region</label>
                     <mat-form-field appearance="outline">
                         <mat-label>Select Region</mat-label>
-                        <mat-select  formControlName="bmxRegion">
+                        <mat-select formControlName="bmxRegion">
                             <mat-option *ngFor="let settingsList of settingsData.OfficeList" [value]="settingsList">
                                 {{settingsList}}
                             </mat-option>
@@ -268,7 +268,7 @@
                     <label class="selectLabels">Company</label>
                     <mat-form-field appearance="outline">
                         <mat-label>Enter Company</mat-label>
-                        <input type="text" matInput  formControlName="bmxCompany">
+                        <input type="text" matInput formControlName="bmxCompany">
                     </mat-form-field>
                     <label class="selectLabels">Language</label>
                     <mat-form-field appearance="outline">
@@ -290,7 +290,7 @@
                 <div style="display: flex;flex-direction: row;">
                     <label class="selectLabels">Regional Directors</label>
                     <mat-form-field appearance="outline">
-                        <mat-label >Select Region</mat-label>
+                        <mat-label>Select Region</mat-label>
                         <mat-select formControlName="bmxRegionalDirector">
                             <mat-option *ngFor="let settingsList of settingsData.OfficeList" [value]="settingsList">
                                 {{settingsList}}
@@ -303,7 +303,7 @@
                     <label class="selectLabels">Director Name</label>
                     <mat-form-field appearance="outline">
                         <mat-label>Director</mat-label>
-                        <mat-select  formControlName="bmxDirectorName">
+                        <mat-select formControlName="bmxDirectorName">
                             <mat-option *ngFor="let settingsList of settingsData.DirectorList" [value]="settingsList">
                                 {{settingsList.Director}}
                             </mat-option>
@@ -500,36 +500,36 @@
             </div>
 
 
-      
-                <div style="width: 350px;">
-                    <span> Title To Your Upload </span><br>
-                    <mat-form-field style="width: 350px;margin-top: 10px;" appearance="outline">
-                        <mat-label>Upload Title</mat-label>
-                        <input matInput placeholder="Upload Title" value="">
-                    </mat-form-field>
 
-                    <h6 style="color: grey;font-size: 10px;">* This title will appear as the gallery name for the group
-                        of files, and it will be demarcate with a 1, 2, 3, or so on </h6>
-                </div>
+            <div style="width: 350px;">
+                <span> Title To Your Upload </span><br>
+                <mat-form-field style="width: 350px;margin-top: 10px;" appearance="outline">
+                    <mat-label>Upload Title</mat-label>
+                    <input matInput placeholder="Upload Title" value="">
+                </mat-form-field>
+
+                <h6 style="color: grey;font-size: 10px;">* This title will appear as the gallery name for the group
+                    of files, and it will be demarcate with a 1, 2, 3, or so on </h6>
+            </div>
 
 
 
-                <div>
-                    Autosizer <button mat-raised-button
-                        style="background-color: #003180;color:white;margin: -20px 20px 0 20px;">Resize
-                        Selected</button><br>
-                    <mat-form-field appearance="outline" style="width: 212px;">
-                        <mat-label>Set Autosize</mat-label>
-                        <mat-select class="selectLabels">
-                            <mat-option *ngFor="let autoSizeOption of AUTOSIZE_OPTIONS" [value]="autoSizeOption">
-                                {{autoSizeOption.name}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-                
+            <div>
+                Autosizer <button mat-raised-button
+                    style="background-color: #003180;color:white;margin: -20px 20px 0 20px;">Resize
+                    Selected</button><br>
+                <mat-form-field appearance="outline" style="width: 212px;">
+                    <mat-label>Set Autosize</mat-label>
+                    <mat-select class="selectLabels">
+                        <mat-option *ngFor="let autoSizeOption of AUTOSIZE_OPTIONS" [value]="autoSizeOption">
+                            {{autoSizeOption.name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
         </div>
-    
+
 
         <div style="display: flex;flex-direction: row;">
             <div style="margin: 10px;font-size: 12px;color:grey;font-weight: 200;padding-top: 17px;">Images Uploaded
@@ -547,14 +547,14 @@
             <div class="template-list" style="margin-top:20px;display: flex;flex-direction: row; height: 100vh;overflow-y: scroll;
             justify-content: flex-start;width: 100%;flex-wrap: wrap;text-align: center;">
                 <div *ngFor="let template of IMAGES_UPLOADED; let i = index">
-                  
+
                     <input type="text" [placeholder]="template.name">
                     <div [ngClass]="(isSelectedButton === i)?'template-list-selected':'template-list-item'"
                         (mouseenter)="isTemplateSelected = i" (mouseleave)="isTemplateSelected = ''">
-                        
-                        
-                        
-                        
+
+
+
+
                         <button (click)="isSelectedButton = i"
                             *ngIf="isTemplateSelected === i && isSelectedButton !== i" mat-raised-button
                             style="background-color: #76d354;color:white;margin: 0 20px 0 20px;">
@@ -582,7 +582,7 @@
 
     <!-- PAGE DESIGN 🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿-->
     <div class="page-design" *ngIf="isMenuActive11" style="border: hotpink solid 1px; width: 60%; height: 100vh;">
-        TEMPLATES
+        PAGE DESIGN
     </div>
     <div class="page-design" *ngIf="isMenuActive11" div style="border: pink solid 1px; width: 25%; height: 100vh;">SIDE
         PANEL 11</div>
@@ -609,7 +609,7 @@
 
     <!-- RESPONDANTS 📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩📩-->
     <div class="page-modules" *ngIf="isMenuActive14" style="border: hotpink solid 1px; width: 60%; height: 100vh;">
-       <app-respondents [isMenuActive14]= "isMenuActive14"></app-respondents>
+        <app-respondents [isMenuActive14]="isMenuActive14"></app-respondents>
     </div>
     <div class="page-modules" *ngIf="isMenuActive14" div style="border: pink solid 1px; width: 25%; height: 100vh;">SIDE
         PANEL 13</div>
@@ -633,7 +633,7 @@
                 </div>
                 <div style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Department Confirmation
                     Emails
-                </div>            
+                </div>
             </div>
 
 
@@ -657,8 +657,7 @@
                             <mat-form-field appearance="outline" style="margin-left: 20px;">
                                 <mat-label>Direct Link</mat-label>
                                 <mat-select class="selectLabels">
-                                    <mat-option *ngFor="let link of LINK_TYPE"
-                                        [value]="link">
+                                    <mat-option *ngFor="let link of LINK_TYPE" [value]="link">
                                         {{link.name}}
                                     </mat-option>
                                 </mat-select>
@@ -670,57 +669,59 @@
                         </div>
                     </div>
                 </div>
-                <div style="margin-left: 20px;">
-                    <div style="margin-bottom: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send Invite</div>
-                    <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between;">
-                        <div style="color:#063074;font-size: 20px;margin-right: 20px;">From :</div>
-                        <input style="width: 458px;" mat-input type="text" placeholder="director@brandinstitute.com">
-                    </div>
-                    <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
-                        <div style="color:#063074;font-size: 20px;margin-right: 20px;">CC :</div>
-                        <input style="width: 458px;" mat-input type="text" placeholder="CC">
-                    </div>
-                    <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
-                        <div style="color:#063074;font-size: 20px;margin-right: 20px;">BCC :</div>
-                        <input style="width: 458px;" mat-input type="text"
-                            placeholder="creative@brandinstitue.com,director1@brandinstitue.com,direct...">
-                    </div>
-                    <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
-                        <div style="color:#063074;font-size: 20px;margin-right: 20px;">Subject :</div>
-                        <input style="width: 458px;" mat-input type="text" placeholder="Subject">
-                    </div>
-
-                    <div style="display: flex;flex-direction: row;">
-                        <mat-icon style="color: #003180;font-size: 25px;">attach_file</mat-icon>
-                        <div style="color: grey;">{{'attachments'}}</div>
-                        <button mat-raised-button
-                            style="background-color: #003180;color:white;margin: -7px 0px 0 12px;">
-                            Choose File(s)
-                        </button>
-                    </div>
-                    <div style="width: 656px;margin-top: 20px;">
-                        <!-- CKEDITOR -->
-                        <div>
-                            <!-- <div style="margin: 30px;" [innerHTML]="brandMatrixObjects[1].componentText | safe: 'html'"></div> -->
-                            <ckeditor id="txtTexto" style="animation: fadeIn 0.5s ease forwards;"
-                                [ngModelOptions]="{standalone: true}" [(ngModel)]="brandMatrixObjects[1].componentText"
-                                [data]="brandMatrixObjects[1].componentText" [config]="ckconfig">
-                            </ckeditor>
-                            <div style="display: flex;justify-content: flex-end;">
-                                <button mat-raised-button style="background-color: #003180;color:white;margin:20px">
-                                    Send Invite
-                                </button>
-                                <button mat-raised-button style="background-color: #003180;color:white;margin:20px 0px">
-                                    Preview Invite
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
             </div>
         </div>
+
+        <!-- EMAIL EDITOR FORM -->
+        <div style="margin-left: 20px;">
+            <div style="margin-bottom: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send Invite</div>
+            <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between;">
+                <div style="color:#063074;font-size: 20px;margin-right: 20px;">From :</div>
+                <input style="width: 458px;" mat-input type="text" placeholder="director@brandinstitute.com">
+            </div>
+            <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                <div style="color:#063074;font-size: 20px;margin-right: 20px;">CC :</div>
+                <input style="width: 458px;" mat-input type="text" placeholder="CC">
+            </div>
+            <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                <div style="color:#063074;font-size: 20px;margin-right: 20px;">BCC :</div>
+                <input style="width: 458px;" mat-input type="text"
+                    placeholder="creative@brandinstitue.com,director1@brandinstitue.com,direct...">
+            </div>
+            <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                <div style="color:#063074;font-size: 20px;margin-right: 20px;">Subject :</div>
+                <input style="width: 458px;" mat-input type="text" placeholder="Subject">
+            </div>
+
+            <div style="display: flex;flex-direction: row;">
+                <mat-icon style="color: #003180;font-size: 25px;">attach_file</mat-icon>
+                <div style="color: grey;">{{'attachments'}}</div>
+                <button mat-raised-button style="background-color: #003180;color:white;margin: -7px 0px 0 12px;">
+                    Choose File(s)
+                </button>
+            </div>
+            <div style="width: 100%;margin-top: 20px;">
+                <!-- CKEDITOR -->
+                <div>
+                    <!-- <div style="margin: 30px;" [innerHTML]="brandMatrixObjects[1].componentText | safe: 'html'"></div> -->
+                    <ckeditor id="txtTexto" style="animation: fadeIn 0.5s ease forwards;"
+                        [ngModelOptions]="{standalone: true}" [(ngModel)]="brandMatrixObjects[1].componentText"
+                        [data]="brandMatrixObjects[1].componentText" [config]="ckconfig">
+                    </ckeditor>
+                    <div style="display: flex;justify-content: flex-end;">
+                        <button mat-raised-button style="background-color: #003180;color:white;margin:20px">
+                            Send Invite
+                        </button>
+                        <button mat-raised-button style="background-color: #003180;color:white;margin:20px 0px">
+                            Preview Invite
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
     </div>
     <!-- <div class="emails" *ngIf="isMenuActive14" div
         style="border: pink solid 1px; width: 25%; height: 100vh;">SIDE
