--- a/src/app/bmx/bmx-creator/respondents/respondents.component.html
+++ b/src/app/bmx/bmx-creator/respondents/respondents.component.html
@@ -1,108 +1,98 @@
-<div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send</div>
+<div style="width: 100%;">
+    <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send</div>
 
-<mat-form-field style="    width: 94%;margin: 20px;" appearance="outline">
-    <mat-label>Copy & Paste Respondents</mat-label>
-    <textarea matInput rows="4" cols="50" #respondants placeholder="First name, Last Name, respondentName@email.com"></textarea>
-</mat-form-field>
-<div style="display: flex;flex-direction: row;">
-
-
-    <!-- CHNAGE THE DROP DOWN FOR CHECK BoXES Select All/Deselect All checkbox & a Select All Not Completed -->
-
-    <mat-form-field appearance="outline" style="margin-left: 20px;">
-        <mat-label>Select not completed</mat-label>
-        <mat-select class="selectLabels">
-            <mat-option *ngFor="let settingsList of ['Select All', 'Deselect All', 'Select All Not Completed']"
-                [value]="settingsList">
-                {{settingsList}}
-            </mat-option>
-        </mat-select>
+    <mat-form-field style="    width: 94%;margin: 20px;" appearance="outline">
+        <mat-label>Copy & Paste Respondents</mat-label>
+        <textarea matInput rows="4" cols="50" #respondants placeholder="First name, Last Name, respondentName@email.com"></textarea>
     </mat-form-field>
-
-    <div style="display: flex;flex-direction: column;">
-        <div>
-            <button mat-raised-button style="background-color: #003180;color:white;margin: 5px 20px 0 20px;" (click)="upLoadResp(respondants.value)" > 
-                Upload Participants
-                
-            </button>
+    <div style="display: flex;flex-direction: row;">
+    
+    
+        <!-- CHNAGE THE DROP DOWN FOR CHECK BoXES Select All/Deselect All checkbox & a Select All Not Completed -->
+    
+        <mat-form-field appearance="outline" style="margin-left: 20px;">
+            <mat-label>Select not completed</mat-label>
+            <mat-select class="selectLabels">
+                <mat-option *ngFor="let settingsList of ['Select All', 'Deselect All', 'Select All Not Completed']"
+                    [value]="settingsList">
+                    {{settingsList}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+    
+        <div style="display: flex;flex-direction: column;">
+            <div>
+                <button mat-raised-button style="background-color: #003180;color:white;margin: 5px 20px 0 20px;" (click)="upLoadResp(respondants.value)" > 
+                    Upload Participants
+                    
+                </button>
+            </div>
+            <div style="position: relative;left: 89px;top: 2px;color: grey;">{{'0 Participants'}}</div>
         </div>
-        <div style="position: relative;left: 89px;top: 2px;color: grey;">{{'0 Participants'}}</div>
     </div>
+    
+    
+    <br>
+    <br>
+    <br>
+    <!-- MAKE YOUR TABLE BELOW THIS IS SAMPLE TABLE -->
+    <div>
+        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+            <!-- Position Column -->
+            <ng-container matColumnDef="firstName">
+                <th mat-header-cell *matHeaderCellDef style="width: 15%;" > First Name </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <input matInput placeholder="First Name " [value]="element.firstName" [(ngModel)]="element.firstName">
+                </td>
+            </ng-container>
+            
+            <ng-container matColumnDef="lastName">
+                <th mat-header-cell *matHeaderCellDef style="width: 15%;"> Last Name </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <input matInput placeholder="Last Name" [value]="element.lastName" [(ngModel)]="element.lastName">
+                     </td>
+            </ng-container>
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef style="width: 30%;"> Email </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <input matInput placeholder="Email" [value]="element.email" [(ngModel)]="element.email">
+
+                     </td>
+            </ng-container>
+            <ng-container matColumnDef="group">
+                <th mat-header-cell *matHeaderCellDef style="width: 5%;"> Group </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <input matInput placeholder="" [value]="element.group" [(ngModel)]="element.group">
+
+                     </td>
+            </ng-container>
+            <ng-container matColumnDef="subGroup">
+                <th mat-header-cell *matHeaderCellDef style="width: 5%;"> Subgroup </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <input matInput placeholder="" [value]="element.subGroup" [(ngModel)]="element.subGroup">
+
+                     </td>
+            </ng-container>
+            <ng-container matColumnDef="weight">
+                <th mat-header-cell *matHeaderCellDef style="width: 5%;"> Weight </th>
+                <td mat-cell *matCellDef="let element">
+                    <input matInput placeholder="" [value]="element.weight" [(ngModel)]="element.weight">
+                     </td>
+            </ng-container>
+            <ng-container matColumnDef="delete">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button  style="color: #bc488a;" aria-label="Example icon button with a home icon"
+                        (click)="deletPart(element.firstName)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+    
 </div>
 
-
-<br>
-<br>
-<br>
-<!-- MAKE YOUR TABLE BELOW THIS IS SAMPLE TABLE -->
-<<<<<<< HEAD
-<div>
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 100%;">
-        <!-- Position Column -->
-        <ng-container matColumnDef="firstName">
-            <th mat-header-cell *matHeaderCellDef> First Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
-        </ng-container>
-        <ng-container matColumnDef="lastName">
-            <th mat-header-cell *matHeaderCellDef> Last Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
-        </ng-container>
-        <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef> Email </th>
-            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-        </ng-container>
-        <ng-container matColumnDef="group">
-            <th mat-header-cell *matHeaderCellDef> Group </th>
-            <td mat-cell *matCellDef="let element"> {{element.group}} </td>
-        </ng-container>
-        <ng-container matColumnDef="subGroup">
-            <th mat-header-cell *matHeaderCellDef> Subgroup </th>
-            <td mat-cell *matCellDef="let element"> {{element.subGroup}} </td>
-        </ng-container>
-        <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef> Weight </th>
-            <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-=======
-<table class="table table-bordered">
-    <tr>
-        <th>Fisrt Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Group</th>
-        <th>Edit</th>
-        <th>Delete</th>
-    </tr>
-</table>
-<div style="display: flex;flex-direction: row; justify-content: space-between;align-items: center;"
-    *ngFor="let settingsList of RESPONDENTS_LIST">
-
     
-        <div style="width: 10%;text-align: start;margin-left: 10px;">{{settingsList.firstName}}</div>
-    
-    
-        <div style="width: 10%;text-align: start;margin-left: 10px;">{{settingsList.lastName}}</div>
-    
-    
-        <div style="width: 10%;text-align: start;margin-left: 10px;">{{settingsList.email}}</div>
-    
-    
-        <button mat-icon-button style="width: 10%;text-align: start;margin-left: 10px;color: #488abc;" aria-label="Example icon button with a home icon">
-            <mat-icon>email</mat-icon>
-        </button>
-    
-    
-        <button mat-icon-button style="width: 10%;text-align: start;margin-left: 10px;color: #48bcb4;" aria-label="Example icon button with a home icon">
-             <mat-icon>build</mat-icon>
-        </button>
-    
-    
-        <button mat-icon-button style="width: 10%;text-align: start;margin-left: 10px;color: #bc488a;" aria-label="Example icon button with a home icon">
-            <mat-icon>delete</mat-icon>
-        </button>
-    
->>>>>>> 9ebd3a57be5c040c12037c054e195c0f5930d267
-</div>
