--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -139,7 +139,7 @@
             <div [ngClass]="(isMenuActive14)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive14')">
                 <div
                     style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
-                    {{'Respondents'}}
+                    {{'Participants'}}
                 </div>
             </div>
             <div [ngClass]="(isMenuActive15)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive15')">
