--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -85,10 +85,9 @@
             <!-- 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 END BMX PARAGRAPH EDITOR -->
 
 
-            <!-- LINEAR SCALE -->
+            <!-- LINEAR SCALE 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽-->
             <div *ngIf="bmxItem.componentType === 'ranking-scale'" class="paragraph"
                 style="display: flex;flex-direction: column;position: relative;">
-
 
                 <div class="emoji-handle">.</div>
                 <div class="test-name-table">
@@ -97,13 +96,11 @@
                     <div style="width: 33%;text-align: start;margin-left: 20px;">RATING</div>
                 </div>
 
-
                 <!-- UPLOAD TESTNAMES -->
                 <div *ngIf="i === selectedIndex" class="mat-elevation-z4">
                     <div style="text-align: center;">
-                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;">PASTE TEST NAMES</div>
+                        <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
                         <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-
                     </div>
                     <div>
                         <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
@@ -111,17 +108,23 @@
                             <textarea matInput rows="4" cols="50"
                                 placeholder="ENHANCE,Hance, En-,EVOLVE,Evo,GUARD,Gard, Guard,INVEST,In, Inv,OMNI,Omni,OPTIMAL"></textarea>
                         </mat-form-field>
-                        <button style="outline: none;color:#76d354;" mat-icon-button (click)="selectedIndex = '';"
-                            aria-label="ranking">
-                            <mat-icon>check_circle</mat-icon>
-                        </button>
                     </div>
+                    <hr>
                     <div style="text-align: center;">
-                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RANKING TYPE</div>
-
-                        
-                        <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
+                        <br>
+                        <br>
+                        <br>
+                        <div>
+                           1 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume"
+                                   min="0" max="11">  {{rankingScaleValue}}  <br>
+                            <label for="volume">from  </label>
+                          </div>
+                          <hr>
+                          <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = '';"
+                          aria-label="ranking">DONE <br>
+                          <mat-icon>check_circle</mat-icon>
+                      </button>
                     </div>
                 </div>
 
@@ -157,46 +160,37 @@
                             aria-label="ranking">
                             <mat-icon>star</mat-icon>
                         </button>
-                        <!-- <input type="radio" id="1" [name]="testName.name" value="1">
-                        <label for="1">1</label>
-                        <input type="radio" id="2" [name]="testName.name" value="2">
-                        <label for="2">2</label>
-                        <input type="radio" id="3" [name]="testName.name" value="3">
-                        <label for="3">3</label> -->
                     </div>
-
-
-
                 </div>
-
-
-
                 <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = '';" mat-icon-button>
                     <mat-icon style="font-size: 25px;">cancel</mat-icon>
                 </button>
                 <button *ngIf="i !== selectedIndex" mat-icon-button class="edit-icon" (click)="selectedIndex = i">
                     <mat-icon style="font-size: 25px;">edit</mat-icon>
                 </button>
-
             </div>
 
-            <!-- END LINEAR SCALE -->
+            <!-- END LINEAR SCALE 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽 -->
 
         </div>
         <!-- END 🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 BRAND MATRIX MODULAR LEGO TEMPLATE COMPONENTS   -->
     </div>
 
+
+
+
+
     <div class="project-info" *ngIf="isMenuActive11" style="border: pink solid 1px; width: 25%; height: 100vh;">
 
         <div style="display: flex;flex-direction: column;margin-top: 50px;">
-            <button (click)="createNewBmxComponent()" mat-icon-button matTooltip="home" matTooltipPosition="right">
+            <button (click)="createNewBmxComponent()" mat-icon-button matTooltip="Add Intro" matTooltipPosition="right">
                 <mat-icon class="full-icon">note_add</mat-icon>
             </button>
-            <button matTooltip="full-screen" matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
-                <mat-icon class="full-icon">aspect_ratio</mat-icon>
+            <button (click)="createRankingComponent()" matTooltip="TEST NAMES" matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
+                <mat-icon class="full-icon">grading</mat-icon>
             </button>
-            <button matTooltip="search" matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
-                <mat-icon class="full-icon">search</mat-icon>
+            <button matTooltip="SCALE" matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
+                <mat-icon class="full-icon">linear_scale</mat-icon>
             </button>
             <button *ngIf="!true" mat-icon-button matTooltip="slide comments" matTooltipPosition="right">
                 <mat-icon class="full-icon">comment</mat-icon>
